static/generated-parser/TreeQLParser.js
// Generated from TreeQL.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TreeQLListener = require('./TreeQLListener').TreeQLListener;
var grammarFileName = "TreeQL.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'null'", null, null, null, "'true'", "'false'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'.'", "'as'", "'boolean'", "'byte'", "'char'", "'double'", 
                     "'conform if equal'", "'derive always'", "'derive if equal'", 
                     "'terminate if not equal'", "'terminate'", "'override'", 
                     "'evaluate'", "'explode'", "'drop'", "'float'", "'int'", 
                     "'join'", "'long'", "'merge'", "'on'", "'recognize'", 
                     "'short'", "'String'", "'Path'", "'Tree'", "'union'", 
                     "'select'", "'from'", "'where'", "'='", "'>'", "'<'", 
                     "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", 
                     "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
                     "'/'", "'%'", "'*'" ];

var symbolicNames = [ null, null, "BOOLEAN_LITERAL", "STRING_LITERAL", "NUMERIC_LITERAL", 
                      "TRUE", "FALSE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "AS", 
                      "BOOLEAN", "BYTE", "CHAR", "DOUBLE", "CONFORMIFEQUAL", 
                      "DERIVEALWAYS", "DERIVEIFNOTEQUAL", "TERMINATEIFNOTEQUAL", 
                      "TERMINATE", "OVERRIDE", "EVALUATE", "EXPLODE", "DROP", 
                      "FLOAT", "INT", "JOIN", "LONG", "MERGE", "ON", "RECOGNIZE", 
                      "SHORT", "STRING", "PATH", "TREE", "UNION", "SELECT", 
                      "FROM", "WHERE", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
                      "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", 
                      "AND", "OR", "INC", "DEC", "ADD", "SUBORNEGATION", 
                      "DIV", "MOD", "STAR", "VAR_NAME", "CHARACTER", "ESCAPE_CHARACTER", 
                      "WS", "COMMENT" ];

var ruleNames =  [ "stats", "definition", "assignmentExpr", "treeQuery", 
                   "selectQuery", "joinQuery", "mergeQuery", "conflictspec", 
                   "explodeQuery", "rangeVariableDeclaration", "abstractTreeName", 
                   "selectExpression", "expression", "arithmeticLogicExpression", 
                   "binaryOperand", "unaryOperand", "treeExpression", "treeElement", 
                   "typeType", "primitiveType", "complexType", "json", "json_value", 
                   "obj", "pair", "arr", "binaryOperator", "unaryOperator", 
                   "signed_number" ];

function TreeQLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TreeQLParser.prototype = Object.create(antlr4.Parser.prototype);
TreeQLParser.prototype.constructor = TreeQLParser;

Object.defineProperty(TreeQLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TreeQLParser.EOF = antlr4.Token.EOF;
TreeQLParser.T__0 = 1;
TreeQLParser.BOOLEAN_LITERAL = 2;
TreeQLParser.STRING_LITERAL = 3;
TreeQLParser.NUMERIC_LITERAL = 4;
TreeQLParser.TRUE = 5;
TreeQLParser.FALSE = 6;
TreeQLParser.LPAREN = 7;
TreeQLParser.RPAREN = 8;
TreeQLParser.LBRACE = 9;
TreeQLParser.RBRACE = 10;
TreeQLParser.LBRACK = 11;
TreeQLParser.RBRACK = 12;
TreeQLParser.SEMI = 13;
TreeQLParser.COMMA = 14;
TreeQLParser.DOT = 15;
TreeQLParser.AS = 16;
TreeQLParser.BOOLEAN = 17;
TreeQLParser.BYTE = 18;
TreeQLParser.CHAR = 19;
TreeQLParser.DOUBLE = 20;
TreeQLParser.CONFORMIFEQUAL = 21;
TreeQLParser.DERIVEALWAYS = 22;
TreeQLParser.DERIVEIFNOTEQUAL = 23;
TreeQLParser.TERMINATEIFNOTEQUAL = 24;
TreeQLParser.TERMINATE = 25;
TreeQLParser.OVERRIDE = 26;
TreeQLParser.EVALUATE = 27;
TreeQLParser.EXPLODE = 28;
TreeQLParser.DROP = 29;
TreeQLParser.FLOAT = 30;
TreeQLParser.INT = 31;
TreeQLParser.JOIN = 32;
TreeQLParser.LONG = 33;
TreeQLParser.MERGE = 34;
TreeQLParser.ON = 35;
TreeQLParser.RECOGNIZE = 36;
TreeQLParser.SHORT = 37;
TreeQLParser.STRING = 38;
TreeQLParser.PATH = 39;
TreeQLParser.TREE = 40;
TreeQLParser.UNION = 41;
TreeQLParser.SELECT = 42;
TreeQLParser.FROM = 43;
TreeQLParser.WHERE = 44;
TreeQLParser.ASSIGN = 45;
TreeQLParser.GT = 46;
TreeQLParser.LT = 47;
TreeQLParser.BANG = 48;
TreeQLParser.TILDE = 49;
TreeQLParser.QUESTION = 50;
TreeQLParser.COLON = 51;
TreeQLParser.EQUAL = 52;
TreeQLParser.LE = 53;
TreeQLParser.GE = 54;
TreeQLParser.NOTEQUAL = 55;
TreeQLParser.AND = 56;
TreeQLParser.OR = 57;
TreeQLParser.INC = 58;
TreeQLParser.DEC = 59;
TreeQLParser.ADD = 60;
TreeQLParser.SUBORNEGATION = 61;
TreeQLParser.DIV = 62;
TreeQLParser.MOD = 63;
TreeQLParser.STAR = 64;
TreeQLParser.VAR_NAME = 65;
TreeQLParser.CHARACTER = 66;
TreeQLParser.ESCAPE_CHARACTER = 67;
TreeQLParser.WS = 68;
TreeQLParser.COMMENT = 69;

TreeQLParser.RULE_stats = 0;
TreeQLParser.RULE_definition = 1;
TreeQLParser.RULE_assignmentExpr = 2;
TreeQLParser.RULE_treeQuery = 3;
TreeQLParser.RULE_selectQuery = 4;
TreeQLParser.RULE_joinQuery = 5;
TreeQLParser.RULE_mergeQuery = 6;
TreeQLParser.RULE_conflictspec = 7;
TreeQLParser.RULE_explodeQuery = 8;
TreeQLParser.RULE_rangeVariableDeclaration = 9;
TreeQLParser.RULE_abstractTreeName = 10;
TreeQLParser.RULE_selectExpression = 11;
TreeQLParser.RULE_expression = 12;
TreeQLParser.RULE_arithmeticLogicExpression = 13;
TreeQLParser.RULE_binaryOperand = 14;
TreeQLParser.RULE_unaryOperand = 15;
TreeQLParser.RULE_treeExpression = 16;
TreeQLParser.RULE_treeElement = 17;
TreeQLParser.RULE_typeType = 18;
TreeQLParser.RULE_primitiveType = 19;
TreeQLParser.RULE_complexType = 20;
TreeQLParser.RULE_json = 21;
TreeQLParser.RULE_json_value = 22;
TreeQLParser.RULE_obj = 23;
TreeQLParser.RULE_pair = 24;
TreeQLParser.RULE_arr = 25;
TreeQLParser.RULE_binaryOperator = 26;
TreeQLParser.RULE_unaryOperator = 27;
TreeQLParser.RULE_signed_number = 28;

function StatsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_stats;
    return this;
}

StatsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatsContext.prototype.constructor = StatsContext;

StatsContext.prototype.treeQuery = function() {
    return this.getTypedRuleContext(TreeQueryContext,0);
};

StatsContext.prototype.EOF = function() {
    return this.getToken(TreeQLParser.EOF, 0);
};

StatsContext.prototype.COMMENT = function() {
    return this.getToken(TreeQLParser.COMMENT, 0);
};

StatsContext.prototype.definition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefinitionContext);
    } else {
        return this.getTypedRuleContext(DefinitionContext,i);
    }
};

StatsContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterStats(this);
	}
};

StatsContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitStats(this);
	}
};




TreeQLParser.StatsContext = StatsContext;

TreeQLParser.prototype.stats = function() {

    var localctx = new StatsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TreeQLParser.RULE_stats);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        _la = this._input.LA(1);
        if(_la===TreeQLParser.COMMENT) {
            this.state = 58;
            this.match(TreeQLParser.COMMENT);
        }

        this.state = 64;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 17)) & ~0x1f) == 0 && ((1 << (_la - 17)) & ((1 << (TreeQLParser.BOOLEAN - 17)) | (1 << (TreeQLParser.BYTE - 17)) | (1 << (TreeQLParser.CHAR - 17)) | (1 << (TreeQLParser.DOUBLE - 17)) | (1 << (TreeQLParser.FLOAT - 17)) | (1 << (TreeQLParser.INT - 17)) | (1 << (TreeQLParser.LONG - 17)) | (1 << (TreeQLParser.SHORT - 17)) | (1 << (TreeQLParser.STRING - 17)) | (1 << (TreeQLParser.TREE - 17)))) !== 0)) {
            this.state = 61;
            this.definition();
            this.state = 66;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 67;
        this.treeQuery();
        this.state = 68;
        this.match(TreeQLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_definition;
    return this;
}

DefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefinitionContext.prototype.constructor = DefinitionContext;

DefinitionContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

DefinitionContext.prototype.VAR_NAME = function() {
    return this.getToken(TreeQLParser.VAR_NAME, 0);
};

DefinitionContext.prototype.ASSIGN = function() {
    return this.getToken(TreeQLParser.ASSIGN, 0);
};

DefinitionContext.prototype.assignmentExpr = function() {
    return this.getTypedRuleContext(AssignmentExprContext,0);
};

DefinitionContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterDefinition(this);
	}
};

DefinitionContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitDefinition(this);
	}
};




TreeQLParser.DefinitionContext = DefinitionContext;

TreeQLParser.prototype.definition = function() {

    var localctx = new DefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TreeQLParser.RULE_definition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.typeType();
        this.state = 71;
        this.match(TreeQLParser.VAR_NAME);
        this.state = 74;
        _la = this._input.LA(1);
        if(_la===TreeQLParser.ASSIGN) {
            this.state = 72;
            this.match(TreeQLParser.ASSIGN);
            this.state = 73;
            this.assignmentExpr();
        }

        this.state = 76;
        this.match(TreeQLParser.SEMI);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignmentExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_assignmentExpr;
    return this;
}

AssignmentExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentExprContext.prototype.constructor = AssignmentExprContext;

AssignmentExprContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignmentExprContext.prototype.signed_number = function() {
    return this.getTypedRuleContext(Signed_numberContext,0);
};

AssignmentExprContext.prototype.json = function() {
    return this.getTypedRuleContext(JsonContext,0);
};

AssignmentExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterAssignmentExpr(this);
	}
};

AssignmentExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitAssignmentExpr(this);
	}
};




TreeQLParser.AssignmentExprContext = AssignmentExprContext;

TreeQLParser.prototype.assignmentExpr = function() {

    var localctx = new AssignmentExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TreeQLParser.RULE_assignmentExpr);
    try {
        this.state = 81;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 78;
            this.expression();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 79;
            this.signed_number();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 80;
            this.json();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TreeQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_treeQuery;
    return this;
}

TreeQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TreeQueryContext.prototype.constructor = TreeQueryContext;

TreeQueryContext.prototype.selectQuery = function() {
    return this.getTypedRuleContext(SelectQueryContext,0);
};

TreeQueryContext.prototype.joinQuery = function() {
    return this.getTypedRuleContext(JoinQueryContext,0);
};

TreeQueryContext.prototype.mergeQuery = function() {
    return this.getTypedRuleContext(MergeQueryContext,0);
};

TreeQueryContext.prototype.explodeQuery = function() {
    return this.getTypedRuleContext(ExplodeQueryContext,0);
};

TreeQueryContext.prototype.LPAREN = function() {
    return this.getToken(TreeQLParser.LPAREN, 0);
};

TreeQueryContext.prototype.treeQuery = function() {
    return this.getTypedRuleContext(TreeQueryContext,0);
};

TreeQueryContext.prototype.RPAREN = function() {
    return this.getToken(TreeQLParser.RPAREN, 0);
};

TreeQueryContext.prototype.rangeVariableDeclaration = function() {
    return this.getTypedRuleContext(RangeVariableDeclarationContext,0);
};

TreeQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterTreeQuery(this);
	}
};

TreeQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitTreeQuery(this);
	}
};




TreeQLParser.TreeQueryContext = TreeQueryContext;

TreeQLParser.prototype.treeQuery = function() {

    var localctx = new TreeQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TreeQLParser.RULE_treeQuery);
    try {
        this.state = 92;
        switch(this._input.LA(1)) {
        case TreeQLParser.SELECT:
            this.enterOuterAlt(localctx, 1);
            this.state = 83;
            this.selectQuery();
            break;
        case TreeQLParser.JOIN:
            this.enterOuterAlt(localctx, 2);
            this.state = 84;
            this.joinQuery();
            break;
        case TreeQLParser.MERGE:
            this.enterOuterAlt(localctx, 3);
            this.state = 85;
            this.mergeQuery();
            break;
        case TreeQLParser.EXPLODE:
            this.enterOuterAlt(localctx, 4);
            this.state = 86;
            this.explodeQuery();
            break;
        case TreeQLParser.LPAREN:
            this.enterOuterAlt(localctx, 5);
            this.state = 87;
            this.match(TreeQLParser.LPAREN);
            this.state = 88;
            this.treeQuery();
            this.state = 89;
            this.match(TreeQLParser.RPAREN);
            break;
        case TreeQLParser.VAR_NAME:
            this.enterOuterAlt(localctx, 6);
            this.state = 91;
            this.rangeVariableDeclaration();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SelectQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_selectQuery;
    return this;
}

SelectQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectQueryContext.prototype.constructor = SelectQueryContext;

SelectQueryContext.prototype.SELECT = function() {
    return this.getToken(TreeQLParser.SELECT, 0);
};

SelectQueryContext.prototype.treeExpression = function() {
    return this.getTypedRuleContext(TreeExpressionContext,0);
};

SelectQueryContext.prototype.FROM = function() {
    return this.getToken(TreeQLParser.FROM, 0);
};

SelectQueryContext.prototype.treeQuery = function() {
    return this.getTypedRuleContext(TreeQueryContext,0);
};

SelectQueryContext.prototype.WHERE = function() {
    return this.getToken(TreeQLParser.WHERE, 0);
};

SelectQueryContext.prototype.selectExpression = function() {
    return this.getTypedRuleContext(SelectExpressionContext,0);
};

SelectQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterSelectQuery(this);
	}
};

SelectQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitSelectQuery(this);
	}
};




TreeQLParser.SelectQueryContext = SelectQueryContext;

TreeQLParser.prototype.selectQuery = function() {

    var localctx = new SelectQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, TreeQLParser.RULE_selectQuery);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(TreeQLParser.SELECT);
        this.state = 95;
        this.treeExpression();
        this.state = 96;
        this.match(TreeQLParser.FROM);
        this.state = 97;
        this.treeQuery();
        this.state = 100;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        if(la_===1) {
            this.state = 98;
            this.match(TreeQLParser.WHERE);
            this.state = 99;
            this.selectExpression();

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JoinQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_joinQuery;
    return this;
}

JoinQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JoinQueryContext.prototype.constructor = JoinQueryContext;

JoinQueryContext.prototype.JOIN = function() {
    return this.getToken(TreeQLParser.JOIN, 0);
};

JoinQueryContext.prototype.treeQuery = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TreeQueryContext);
    } else {
        return this.getTypedRuleContext(TreeQueryContext,i);
    }
};

JoinQueryContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TreeQLParser.COMMA);
    } else {
        return this.getToken(TreeQLParser.COMMA, i);
    }
};


JoinQueryContext.prototype.ON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TreeQLParser.ON);
    } else {
        return this.getToken(TreeQLParser.ON, i);
    }
};


JoinQueryContext.prototype.selectExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SelectExpressionContext);
    } else {
        return this.getTypedRuleContext(SelectExpressionContext,i);
    }
};

JoinQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterJoinQuery(this);
	}
};

JoinQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitJoinQuery(this);
	}
};




TreeQLParser.JoinQueryContext = JoinQueryContext;

TreeQLParser.prototype.joinQuery = function() {

    var localctx = new JoinQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, TreeQLParser.RULE_joinQuery);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.match(TreeQLParser.JOIN);
        this.state = 103;
        this.treeQuery();
        this.state = 110; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 104;
        		this.match(TreeQLParser.COMMA);
        		this.state = 105;
        		this.treeQuery();
        		this.state = 108;
        		this._errHandler.sync(this);
        		var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        		if(la_===1) {
        		    this.state = 106;
        		    this.match(TreeQLParser.ON);
        		    this.state = 107;
        		    this.selectExpression();

        		}
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 112; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MergeQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TreeQLParser.RULE_mergeQuery;
    return this;
}

MergeQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MergeQueryContext.prototype.constructor = MergeQueryContext;

MergeQueryContext.prototype.MERGE = function() {
    return this.getToken(TreeQLParser.MERGE, 0);
};

MergeQueryContext.prototype.treeQuery = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TreeQueryContext);
    } else {
        return this.getTypedRuleContext(TreeQueryContext,i);
    }
};

MergeQueryContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TreeQLParser.COMMA);
    } else {
        return this.getToken(TreeQLParser.COMMA, i);
    }
};


MergeQueryContext.prototype.ON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TreeQLParser.ON);
    } else {
        return this.getToken(TreeQLParser.ON, i);
    }
};


MergeQueryContext.prototype.selectExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SelectExpressionContext);
    } else {
        return this.getTypedRuleContext(SelectExpressionContext,i);
    }
};

MergeQueryContext.prototype.conflictspec = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConflictspecContext);
    } else {
        return this.getTypedRuleContext(ConflictspecContext,i);
    }
};

MergeQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.enterMergeQuery(this);
	}
};

MergeQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof TreeQLListener ) {
        listener.exitMergeQuery(this);
	}
};




TreeQLParser.MergeQueryContext = MergeQueryContext;

TreeQLParser.prototype.mergeQuery = function() {

    var localctx = new MergeQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, TreeQLParser.RULE_mergeQuery);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this.match(TreeQLParser.MERGE);
        this.state = 115;
        this.treeQuery();
        this.state = 125; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 116;
        		this.match(TreeQLParser.COMMA);
        		this.state = 117;
        		this.treeQuery();
        		this.state = 120;
        		this._errHandler.sync(this);
        		var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        		if(la_===1) {
        		    this.state = 118;
        		    this.match(TreeQLParser.ON);
        		    this.state = 119;
        		    this.selectExpression();
